Changed add contacts dialog to be wider and fixed width on narrow displays.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1985,23 +1985,37 @@ room-content-margin-height = 10px
   margin-left -102px // Negative width divided by 2.
   margin-top -67px // Negative height divided by 2.
 
+add-contacts-form-width = 355px
 .add-contacts-form
-  width 255px
-  margin-left -127px // Negative width divided by 2.
+  box-sizing border-box
+  width add-contacts-form-width
+  max-width 100%
+  margin-left -(add-contacts-form-width / 2)
   margin-top -82px // Negative height divided by 2.
 
+  .text-width-fix
+    padding-right 2 * (1px + 5px) // Twice textarea border and padding.
+
   .new-contacts-text
-    box-sizing border-box
+    box-sizing content-box
     width 100%
+    height 3.5em
     margin 0
     border-radius 3px
     padding 5px
+    font-size 12px
+    line-height 1.2
 
   .help-text
     margin 5px 0
     color #888
     font-size 80%
 
+add-contacts-form-width-media = "(max-width: " + add-contacts-form-width + ")"
+@media add-contacts-form-width-media
+  .add-contacts-form
+    left 0
+    margin-left 0
 
 room-members-sidebar-width = 200px
 
